# BingoBot

./: .dockerignore  .gitignore  AGENTS.md  CodexEnv.sh  Dockerfile  README.md  bot.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  view-logs.sh
.cursor/rules/: project-overview.mdc
ai/: __init__.py  cog.py  interface.py  mcp_client.py  prompts.py  utils.py
ai/commands/: __init__.py  files.py  query.py
bingo/: __init__.py  cog.py
bingo/commands/: __init__.py  delete_game.py  help.py  init_game.py  list_events.py  list_games.py  new_game.py  set_active_game.py  view_board.py  vote.py
bingo/models/: __init__.py  board.py  board_square.py  event.py  game.py  vote.py
bingo/utils/: __init__.py  board_generator.py  board_image.py  channel_check.py  config.py  csv_parser.py  db_utils.py  (+2 more)
commands/: __init__.py  delete_game.py  help.py  init_game.py  list_events.py  new_game.py  set_active_game.py  view_board.py  vote.py
db/: __init__.py  database.py
filesystem/: __init__.py  cog.py
models/: __init__.py  board.py  board_square.py  event.py  game.py  vote.py
monitoring/: __init__.py  cog.py
run/: VOLTAGE_MONITORING_README.md  docker-entrypoint.sh  setup.sh  setup_voltage_monitoring.sh  update.sh  view-logs.sh  voltage_monitor.py
tests/: conftest.py  test_board_generator.py  test_board_image.py  test_channel_check.py  test_csv_parser.py  test_db_utils.py  test_env_utils.py  test_win_checker.py
utils/: __init__.py  board_generator.py  channel_check.py  config.py  csv_parser.py  db_utils.py  discord_utils.py  env_utils.py
(+3 files in other folders)
