[project]
name = "ai-bot"
version = "0.1.0"
description = "Discord bot with AI interface for complex python tasks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-py>=2.3.0",
    "openai>=1.59.8",
    "openai-agents>=0.0.16",
    "pillow>=11.1.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]
